[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/note.png" type="Texture" id=1]
[ext_resource path="res://Note/Note.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 14.0
height = 14.0

[node name="Note" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, 3 )
scale = Vector2( 1, 2.3 )

[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Area2D_area_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
